# dengue_forecasting_brazil

./: .dockerignore  .gitignore  NOTEBOOK.md  README.md  RUN_APP.md  pyproject.toml
.claude/skills/git-commit-push/: SKILL.md
.claude/skills/git-undo-last-commit/: SKILL.md
.claude/skills/research-notebook/: SKILL.md
app/: Dockerfile  docker-entrypoint.sh  pyproject.toml
app/src/dengue_app/: api_client.py  charts.py  city_coords.py  dashboard.py  data.py  layout.py  main.py  risk.py
app/src/dengue_app/views/: about.py  home.py
ml/: pyproject.toml
ml/configs/: model_training.yaml
ml/data/: sst_indices.csv
ml/data/raw/: RONI_nino_3_4.csv  infodengue_capitals_subsetBR.csv
ml/notebooks/: data_exploratory_analysis_sst.ipynb
ml/results/: latest_run.txt
ml/results/production_run/: baseline_improvement.csv  best_hyperparameters.csv  best_hyperparameters_clf.csv  coverage_by_gap.csv  coverage_by_gap_with_ar.csv  feature_columns.json  feature_importance.csv  final_classifier.pkl  final_model.pkl  final_quarterly_forecast.csv  final_quarterly_forecast_horizon_aware.csv  final_weekly_forecast.csv  fold_metrics.csv  fold_metrics_clf.csv  fold_predictions.csv  fold_predictions_ar.csv  fold_predictions_clf.csv  metrics_by_fold.csv  model_comparison.csv  model_selection_ranking.csv  proxy_comparison.csv  selected_classifier.txt
ml/scripts/: generate_forecasts.py  run_autoregressive_cv.py  run_classifier_cv.py  run_nested_cv.py  run_pipeline.sh  train_final_model.py
ml/src/dengue_ml/: config.py  data_loading.py  data_refresh.py  preprocessing.py  run_dir.py  training_config.py
ml/src/dengue_ml/features/: EstRtGT_v4.R  Rt_calc-example.rmd  climate_features.py  feature_pipeline.py  forecast_proxies.py  monthly_lag_features.py  rt_estimation.py  sst_features.py  sumgamma_v2.R  target_lag_features.py  temporal_features.py  weekly_lag_features.py
ml/src/dengue_ml/features/Codeco-et-al-2017/: Codeco-et-al-2017.md  FIdata.csv  RJdata.csv  Rt_calc-example.nb.html
ml/src/dengue_ml/forecasting/: autoregressive.py  forecast_next_12m.py  forecast_next_4q.py  forecast_next_52w.py  pipeline.py  quarterly_aggregation.py
ml/src/dengue_ml/models/: baseline.py  classifier_models.py  model_factory.py  sarima.py  xgboost_models.py  xrfm_models.py
ml/src/dengue_ml/reporting/: plots.py  results_tables.py
ml/src/dengue_ml/training/: final_train.py  hyperparameter_search.py  train_pipeline.py
ml/src/dengue_ml/validation/: autoregressive_cv.py  classification_metrics.py  conditional_residuals.py  metrics.py  nested_cv.py  nested_cv_classifier.py  time_splits.py
ml/tests/: test_classification_metrics.py  test_conditional_residuals.py  test_config.py  test_data_refresh.py  test_feature_pipeline.py  test_metrics.py  test_nested_cv_classifier.py  test_time_splits.py
