[project]
name = "dengue-forecasting-brazil"
version = "0.1.0"
description = "Quarterly dengue forecasting MVP for Brazilian Southeast capitals"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["packages/*", "ml", "app"]

[tool.uv]
package = false

# CPU-only PyTorch wheels: no GPU on this cluster's nodes, and the default
# PyPI torch wheel drags in ~2GB of unused CUDA/cuDNN/NCCL packages.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
