[project]
name = "dengue-app"
version = "0.1.0"
description = "FastAPI backend serving dengue forecasts"
requires-python = ">=3.13"
dependencies = ["dengue-core", "fastapi>=0.137.1", "uvicorn>=0.49.0"]

[tool.uv.sources]
dengue-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dengue_app"]
