[project]
name = "dengue-app"
version = "0.1.0"
description = "FastAPI backend and Streamlit dashboard (DORA) serving dengue forecasts"
requires-python = ">=3.13"
dependencies = [
    "dengue-core",
    "dengue-ml",
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
    "streamlit>=1.50",
    "plotly>=6.0",
    "requests>=2.32",
]

[tool.uv.sources]
dengue-core = { workspace = true }
dengue-ml = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dengue_app"]
