[project]
name = "dengue-ml"
version = "0.1.0"
description = "Model training, evaluation, and forecasting notebooks/scripts for dengue forecasting MVP"
requires-python = ">=3.13"
dependencies = [
    "dengue-core",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "scipy>=1.16",
    "matplotlib>=3.10",
    "scikit-learn>=1.9.0",
    "xgboost>=3.2.0",
    "xrfm>=0.0.6",
    "torch>=2.0",
    "statsmodels>=0.14",
    "joblib>=1.4",
    "pyyaml>=6.0",
    "requests>=2.32",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.uv.sources]
dengue-core = { workspace = true }
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dengue_ml"]
